--- a/css/index.css
+++ b/css/index.css
@@ -11,43 +11,25 @@ body {
 
 /* Cabeçalho */
 
+#div{
+    max-width: 100%;
+    max-height: 100%;
+    border-radius: 3px;
+}
+
 #divhead img {
-    border-style: solid;
-    border-radius: 5px;
-    width: 99.5%;
-    height: 99.5%;
+    border-radius: 3px;
 }
 
-#navhead {
-    position: absolute;
-    top: 250px;
-    right: 250px;
-}
-
-#navhead a {
-    color: black;
+a {
     text-decoration: none;
-    text-shadow: 2px 2px aquamarine;
+    color: black;
+    display: inline;
 }
 
-/* conteudo esquerda */
-.contentleft{
-    background-color: chocolate;
-    float: left;
-    width: 600px;
-    height: 200px;
-    margin: -5px 0px 0px 0px;
+a:hover{
+    background-color: rgb(248, 164, 164);
 }
-
-/* conteúdo direita */
-.contentright{
-    background-color: chocolate;
-    float: right;
-    width: 600px;
-    height: 200px;
-    margin: -5px 0px 0px 0px;
-}
-
 /* rodapé */
 footer{
     clear: both;
