--- a/css/index.css
+++ b/css/index.css
@@ -1,37 +1,52 @@
 /* Corpo */
-
 * {
     margin: 0;
     padding: 0;
 }
 
-body {
-    background-color: rgba(122, 52, 52, 0.856);
-}
-
 /* Cabeçalho */
-
-#div{
-    max-width: 100%;
-    max-height: 100%;
-    border-radius: 3px;
+header{
+    min-width: 300px;
+    min-width: 50px;
+    max-width: 1920px;
+    max-height: 300px;
 }
 
-#divhead img {
+img {
     border-radius: 3px;
+    background-size: cover;
 }
 
-a {
+/* menu */
+nav{
+    background-color: chocolate;
+}
+
+#menu {
     text-decoration: none;
     color: black;
     display: inline;
 }
 
-a:hover{
-    background-color: rgb(248, 164, 164);
+#menu:hover{
+    background-color: rgba(43, 10, 10, 0.5);
 }
+
+/* conteúdo */
+section{
+    background-size: cover;
+   background-image: url(../../Downloads/rise2.jpeg); 
+   width: 500px;
+   height: 550px;
+}
+
+#sessao{
+    text-decoration: none;
+    margin: auto auto auto 30px;
+    padding: 5px;
+}
+
 /* rodapé */
 footer{
-    clear: both;
     text-align: center;
 }
