--- a/css/index.css
+++ b/css/index.css
@@ -4,49 +4,110 @@
     padding: 0;
 }
 
+body{
+    background-image: url(../images/background.png);
+    background-size: cover;
+}
+
 /* Cabeçalho */
 header{
-    min-width: 300px;
-    min-width: 50px;
-    max-width: 1920px;
-    max-height: 300px;
+   width: auto;
+   height: 75px;
+}
+
+#title{
+    color: black;
+    text-align: center;
+    background-color: chocolate;
+    margin: -57px 0 0 0;
 }
 
 img {
     border-radius: 3px;
     background-size: cover;
+    width: 100px;
+    height: 75px;
+    margin: 0 0 0 50px;
 }
 
 /* menu */
 nav{
-    background-color: chocolate;
+    margin: 20px 0 0 0;
+    width: 100%;
+    height: 0%;
 }
 
 #menu {
+    text-shadow: 2px 2px 5px black;
     text-decoration: none;
-    color: black;
+    color: white;
     display: inline;
+    margin: 0 0 0 10px;
 }
 
 #menu:hover{
-    background-color: rgba(43, 10, 10, 0.5);
+    background-color: rgb(210, 105, 30);
 }
 
 /* conteúdo */
 section{
-    background-size: cover;
-   background-image: url(../../Downloads/rise2.jpeg); 
-   width: 500px;
-   height: 550px;
+    width: 100%;
+    height: 500px;
+    margin: 25px 0 0 0;
+}
+ul{
+    border-style: solid;
+    border-color: chocolate;
+    border-width: 1px;
+    max-width: 150px;
+    max-height: 200px;
+    margin: 0 0 0 10px;
+    padding: 10px;
 }
 
 #sessao{
     text-decoration: none;
     margin: auto auto auto 30px;
-    padding: 5px;
+    color: white;
+    text-shadow: 2px 2px 5px black;
 }
 
+#h2links{
+    text-shadow: 2px 2px 5px black;
+    margin: 23px 0 0 10px;
+    color: white;
+}
+
+/* conteúdo central */
+
+#center{
+    background-image: url(../../Downloads/rise2.jpeg);
+    background-size: cover;
+    border-style: solid;
+    border-color: 2px black;
+    width: 300px;
+    height: 300px;
+    position: relative;
+    top: -450px;
+    right: -468px;
+    bottom: 450px;
+    left: 468px;
+
+}
+
+/* contéudo esquerda */
+#iframe{
+    position: relative;
+    top: -755px;
+    right: -900px;
+    bottom: 755px;
+    left: 900px;
+
+    width:300px;
+    height:350px;
+}
 /* rodapé */
 footer{
     text-align: center;
+    color: chocolate;
 }
